--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, user-scalable=no, viewport-fit=cover" />
     <meta name="theme-color" content="#000000" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <script
+src="http://js.api.here.com/v3/3.0/mapsjs-core.js"
+type="text/javascript"
+charset="utf-8"
+></script>
+<script
+type="text/javascript"
+src="https://js.api.here.com/v3/3.0/mapsjs-ui.js"
+></script>
+<script
+type="text/javascript"
+src="https://js.api.here.com/v3/3.0/mapsjs-mapevents.js"
+></script>
+<script
+src="http://js.api.here.com/v3/3.0/mapsjs-service.js"
+type="text/javascript"
+charset="utf-8"
+></script>
+<link rel="stylesheet" href="https://unpkg.com/leaflet@1.4.0/dist/leaflet.css" integrity="sha512-puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrDh+drA==" crossorigin=""
+/>
+<link
+rel="stylesheet"
+href="https://unpkg.com/leaflet-routing-machine@latest/dist/leaflet-routing-machine.css"
+/>
+<script src="https://unpkg.com/leaflet@1.4.0/dist/leaflet.js"
+integrity="sha512-QVftwZFqvtRNi0ZyCtsznlKSWOStnDORoefr1enyq5mVL4tmKB3S/EnC3rRJcxCPavG10IcrVGSmPh6Qw5lwrg==" crossorigin=""></script>
+<script src="https://unpkg.com/leaflet-routing-machine@latest/dist/leaflet-routing-machine.js"></script>
+<script src="leaflet-providers.js"></script>
     <title>React App</title>
   </head>
   <body>
